--- a/index.html
+++ b/index.html
@@ -53,39 +53,18 @@
                 </li>
                 <li id="q02" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq02" aria-expanded="false" aria-controls="faq02">
-                        <div class="title">如何調整防護等級/解除綁定？</div>
+                        <div class="title">若畫面一直停在loading畫面該怎麼辦？</div>
                     </div>
                     <div id="faq02" class="collapse" aria-labelledby="faq02" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
-                                    <h1>STEP 1.</h1>
-                                    <p>點選左上方側邊 <span class="text-green">選單按鈕</span></p>
+                                    <p>請先嘗試重新開啟 beanfun! 及確認 beanfun! 已更新至最新版本。若問題仍無法排除，請來信或來電客服協助。</p>
                                 </div>
                                 <div class="col-12 col-md-8">
                                     <div class="bg">
-                                        <img src="images/faq/phoneimg-02-xl.png">
-                                        <img src="images/faq/phoneimg-02-sm.png">
-                                    </div>
-                                </div>
-                                <div class="col-12 offset-0 col-md-3 offset-md-1 pt-5">
-                                    <h1>STEP 2.</h1>
-                                    <p>再點擊 <span class="text-green">安全防護</span></p>
-                                </div>
-                                <div class="col-12 col-md-8">
-                                    <div class="bg">
-                                        <img src="images/faq/phoneimg-03-xl.png">
-                                        <img src="images/faq/phoneimg-03-sm.png">
-                                    </div>
-                                </div>
-                                <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
-                                    <h1>STEP 3.</h1>
-                                    <p>即可看到 <span class="text-green">調整防護等級</span> 和 <span class="text-green">解除綁定</span> 的地方喔~</p>
-                                </div>
-                                <div class="col-12 col-md-8">
-                                    <div class="bg">
-                                        <img src="images/faq/phoneimg-04-xl.png">
-                                        <img src="images/faq/phoneimg-04-sm.png">
+                                        <img src="images/faq/phoneimg-11-xl.png">
+                                        <img src="images/faq/phoneimg-11-sm.png">
                                     </div>
                                 </div>
                             </div>
@@ -136,9 +115,70 @@
                 </li>
                 <li id="q04" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq04" aria-expanded="false" aria-controls="faq04">
-                        <div class="title">重新安裝的會員，要怎麼找回原本綁定的點數帳號？</div>
+                        <div class="title">若顯示訊息"帳號已被其他裝置綁定，請至原裝置解綁＂該怎麼辦？</div>
                     </div>
                     <div id="faq04" class="collapse" aria-labelledby="faq04" data-parent="#accordion">
+                        <div class="ans-content">
+                            <div class="row no-gutters">
+                                <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                    <p>若更換新的裝置做綁定，請記得先解綁舊裝置。當舊裝置已無法使用或更換手機號碼，請來信或來電客服請求協助。</p>
+                                </div>
+                                <div class="col-12 col-md-8">
+                                    <div class="bg">
+                                        <img src="images/faq/phoneimg-12-xl.png">
+                                        <img src="images/faq/phoneimg-12-sm.png">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li id="q05" class="faq">
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq05" aria-expanded="false" aria-controls="faq05">
+                        <div class="title">如何調整防護等級/解除綁定？</div>
+                    </div>
+                    <div id="faq05" class="collapse" aria-labelledby="faq05" data-parent="#accordion">
+                        <div class="ans-content">
+                            <div class="row no-gutters">
+                                <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                    <h1>STEP 1.</h1>
+                                    <p>點選左上方側邊 <span class="text-green">選單按鈕</span></p>
+                                </div>
+                                <div class="col-12 col-md-8">
+                                    <div class="bg">
+                                        <img src="images/faq/phoneimg-02-xl.png">
+                                        <img src="images/faq/phoneimg-02-sm.png">
+                                    </div>
+                                </div>
+                                <div class="col-12 offset-0 col-md-3 offset-md-1 pt-5">
+                                    <h1>STEP 2.</h1>
+                                    <p>再點擊 <span class="text-green">安全防護</span></p>
+                                </div>
+                                <div class="col-12 col-md-8">
+                                    <div class="bg">
+                                        <img src="images/faq/phoneimg-03-xl.png">
+                                        <img src="images/faq/phoneimg-03-sm.png">
+                                    </div>
+                                </div>
+                                <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                    <h1>STEP 3.</h1>
+                                    <p>即可看到 <span class="text-green">調整防護等級</span> 和 <span class="text-green">解除綁定</span> 的地方喔~</p>
+                                </div>
+                                <div class="col-12 col-md-8">
+                                    <div class="bg">
+                                        <img src="images/faq/phoneimg-04-xl.png">
+                                        <img src="images/faq/phoneimg-04-sm.png">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li id="q06" class="faq">
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq06" aria-expanded="false" aria-controls="faq06">
+                        <div class="title">重新安裝的會員，要怎麼找回原本綁定的點數帳號？</div>
+                    </div>
+                    <div id="faq06" class="collapse" aria-labelledby="faq06" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-md-10 offset-md-1 py-4">
@@ -148,11 +188,11 @@
                         </div>
                     </div>
                 </li>
-                <li id="q05" class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq05" aria-expanded="false" aria-controls="faq05">
+                <li id="q07" class="faq">
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq07" aria-expanded="false" aria-controls="faq07">
                         <div class="title">什麼是零用金？</div>
                     </div>
-                    <div id="faq05" class="collapse" aria-labelledby="faq05" data-parent="#accordion">
+                    <div id="faq07" class="collapse" aria-labelledby="faq07" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-md-10 offset-md-1 py-4">
@@ -162,11 +202,11 @@
                         </div>
                     </div>
                 </li>
-                <li id="q06" class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq06" aria-expanded="false" aria-controls="faq06">
+                <li id="q08" class="faq">
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq08" aria-expanded="false" aria-controls="faq08">
                         <div class="title">取得零用金後要到哪邊查看呢？</div>
                     </div>
-                    <div id="faq06" class="collapse" aria-labelledby="faq06" data-parent="#accordion">
+                    <div id="faq08" class="collapse" aria-labelledby="faq08" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
@@ -182,11 +222,11 @@
                         </div>
                     </div>
                 </li>
-                <li id="q07" class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq07" aria-expanded="false" aria-controls="faq07">
+                <li id="q09" class="faq">
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq09" aria-expanded="false" aria-controls="faq09">
                         <div class="title">怎麼設定推播提醒？</div>
                     </div>
-                    <div id="faq07" class="collapse" aria-labelledby="faq07" data-parent="#accordion">
+                    <div id="faq09" class="collapse" aria-labelledby="faq09" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
@@ -202,11 +242,11 @@
                         </div>
                     </div>
                 </li>
-                <li id="q08" class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq08" aria-expanded="false" aria-controls="faq08">
+                <li id="q10" class="faq">
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq10" aria-expanded="false" aria-controls="faq10">
                         <div class="title">儲值中心在哪裡？</div>
                     </div>
-                    <div id="faq08" class="collapse" aria-labelledby="faq08" data-parent="#accordion">
+                    <div id="faq10" class="collapse" aria-labelledby="faq10" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
@@ -222,11 +262,11 @@
                         </div>
                     </div>
                 </li>
-                <li id="q09" class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq09" aria-expanded="false" aria-controls="faq09">
+                <li id="q11" class="faq">
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq11" aria-expanded="false" aria-controls="faq11">
                         <div class="title">樂豆點紀錄查詢在哪裡？</div>
                     </div>
-                    <div id="faq09" class="collapse" aria-labelledby="faq09" data-parent="#accordion">
+                    <div id="faq11" class="collapse" aria-labelledby="faq11" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
@@ -255,11 +295,11 @@
                         </div>
                     </div>
                 </li>
-                <li id="q10" id="q10" class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq10" aria-expanded="false" aria-controls="faq10">
+                <li id="q12" class="faq">
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq12" aria-expanded="false" aria-controls="faq12">
                         <div class="title">問題沒有在上面我要怎麼辦？</div>
                     </div>
-                    <div id="faq10" class="collapse" aria-labelledby="faq10" data-parent="#accordion">
+                    <div id="faq12" class="collapse" aria-labelledby="faq12" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-sm-10 offset-sm-1 py-4">
