--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="vendor/bootstrap/bootstrap.js"></script>
     <script src="js/creative.js"></script>
+    <script type="text/javascript" src="https://tw.hicdn.beanfun.com/beanfun/GamaWWW/allProducts/script/game-footer.js" id="game-footer" prod="bf!遊戲" theme="light"></script>
 </head>
 
 <body id="main">
@@ -31,7 +32,7 @@
         </div>
         <div id="accordion">
             <ol>
-                <li id="q01" class="faq">
+                <li id="enter-bf" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq01" aria-expanded="false" aria-controls="faq01">
                         <div class="title">要怎麼進入"beanfun! 遊戲"的介面？</div>
                     </div>
@@ -51,7 +52,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q02" class="faq">
+                <li id="if-loading" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq02" aria-expanded="false" aria-controls="faq02">
                         <div class="title">若畫面一直停在loading畫面該怎麼辦？</div>
                     </div>
@@ -71,7 +72,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q03"class="faq">
+                <li id="add-account"class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq03" aria-expanded="false" aria-controls="faq03">
                         <div class="title">如何新增綁定帳號？</div>
                     </div>
@@ -113,7 +114,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q04" class="faq">
+                <li id="bind-account" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq04" aria-expanded="false" aria-controls="faq04">
                         <div class="title">若顯示訊息"帳號已被其他裝置綁定，請至原裝置解綁＂該怎麼辦？</div>
                     </div>
@@ -133,7 +134,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q05" class="faq">
+                <li id="adj-safe" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq05" aria-expanded="false" aria-controls="faq05">
                         <div class="title">如何調整防護等級/解除綁定？</div>
                     </div>
@@ -174,7 +175,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q06" class="faq">
+                <li id="re-install" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq06" aria-expanded="false" aria-controls="faq06">
                         <div class="title">重新安裝的會員，要怎麼找回原本綁定的點數帳號？</div>
                     </div>
@@ -188,7 +189,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q07" class="faq">
+                <li id="what-cash" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq07" aria-expanded="false" aria-controls="faq07">
                         <div class="title">什麼是零用金？</div>
                     </div>
@@ -202,7 +203,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q08" class="faq">
+                <li id="search-cash" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq08" aria-expanded="false" aria-controls="faq08">
                         <div class="title">取得零用金後要到哪邊查看呢？</div>
                     </div>
@@ -222,7 +223,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q09" class="faq">
+                <li id="set-notice" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq09" aria-expanded="false" aria-controls="faq09">
                         <div class="title">怎麼設定推播提醒？</div>
                     </div>
@@ -242,7 +243,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q10" class="faq">
+                <li id="where-control" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq10" aria-expanded="false" aria-controls="faq10">
                         <div class="title">儲值中心在哪裡？</div>
                     </div>
@@ -262,7 +263,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q11" class="faq">
+                <li id="bf-search" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq11" aria-expanded="false" aria-controls="faq11">
                         <div class="title">樂豆點紀錄查詢在哪裡？</div>
                     </div>
@@ -295,7 +296,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="q12" class="faq">
+                <li id="more-qa" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq12" aria-expanded="false" aria-controls="faq12">
                         <div class="title">問題沒有在上面我要怎麼辦？</div>
                     </div>
